0031825: Data Exchange, STEP - NULL dereference while re-exporting model with empty Datum description

Fix adding name and description of the datum